# CloudLab

./: .gitignore  LICENSE  README.md
Azure/AppServicePlan/: .gitignore  README.md  backend.example.tf  provider.tf  terraform.example.tfvars
Azure/AzureDevOps-Org/: README.md
Azure/AzureDevOps-Org/Pulumi-Python/: Pulumi.example.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
Azure/AzureDevOps-Org/Pulumi-Python/.azure-devops/: invoke-pulumi.azure-pipeline.yml
Azure/NATGateway/: .terraform.lock.hcl  README.md  backend.example.tf  main.tf
Azure/ResourceGroup/: README.md  terraform.example.tfvars
GCP/Day0/: README.md
GCP/cloudsql-mssql/: .terraform.lock.hcl  README.md  backend.example.tf  main.tf  terraform.example.tfvars  variables.tf
GCP/gke/: README.md  backend.example.tf  main.tf  terraform.example.tfvars  variables.tf
GCP/memorystore/: .terraform.lock.hcl  README.md  main.tf  terraform.example.tfvars  variables.tf
GCP/mssql-public/: .gitignore  .terraform.lock.hcl  README.md  backend.example.tf  main.tf  outputs.tf  providers.tf  terraform.example.tfvars  terraform.tfvars  variables.tf
GCP/network/: README.md  backend.example.tf  main.tf  provider.tf  terraform.example.tfvars  variables.tf
GCP/redis/: README.md  backend.example.tf  main.tf  providers.tf
GCP/simple_autopilot_public/: README.md  main.tf  network.tf  outputs.tf  variables.tf
GCP/simple_bucket/: README.md  (+4 more)
TLS/CA/Pulumi-Python/: Pulumi.default.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
TLS/CA/Pulumi-Python/.azure-devops/: invoke-pulumi.azure-pipeline.yml
(+61 files in other folders)
