[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = "IaC project to manage pipelines in this repo via IaC"
authors = ["Team-EOS-Architecture-Optimisation"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pulumi-azuredevops = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
