[tool.poetry]
name = "pki"
version = "0.1.0"
description = ""
authors = ["Windom WU <windom.wu@serko.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pulumi-tls = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
